--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,7 +7,7 @@ body {
   font-size: 15px;
   font-size: 0.9375rem;
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
-  color: #666666;
+  color: #201f1f;
   padding: 0;
 }
 
@@ -87,16 +87,16 @@ body {
 /* Header */
 #head {
   background-color: #f4f4f4;
-  color: #7c7c7c;
+  color: #a163e8;
   padding: 30px 0 35px 0;
 }
 
 #head img.img-circle {
   display: block;
-  width: 140px;
-  height: 140px;
+  width: 160px;
+  height: 160px;
   overflow: hidden;
-  border: 9px solid rgba(0, 0, 0, 0.05);
+  border: 9px solid rgba(0, 0, 0, 0);
   margin: 0 auto;
 }
 
