--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
                     <div class="entry-content">
                         <ul class="technical-skills-list">
                             <li><strong>Programming Languages:</strong> Python, R, SQL, HTML</li>
-                            <li><strong>Testing Tools:</strong> Selenium, JIRA, TestRail, Jenk                            <li><strong>API Testing:</strong> REST</li>
+                            <li><strong>Testing Tools:</strong> Selenium, Postman, TestRail, Jenkins </li>                            <li><strong>API Testing:</strong> REST</li>
                             <li><strong>Cloud Computing:</strong> Service Virtualization</li>
                             <li><strong>Data Visualization:</strong> Tableau, PowerBI, R </li>
                             <li><strong>Other Tools:</strong> AWS</li>
